# vivo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  release-please-config.json  sample.kdl
.cargo/: config.toml
.gitea/workflows/: mirror.yml
.github/workflows/: release-please.yml  release.yml
src/: backup_config.rs  config.rs  doctor.rs  lib.rs  step.rs  ui.rs  update.rs
src/backup_config/: backup.rs  mod.rs  task.rs
src/remote/: b2.rs  mod.rs  s3.rs
