[package]
name = "vivo"
version = "0.4.4"
edition = "2021"
authors = ["Daniel Tucker <vivo@dantuck.com>"]
categories = ["command-line-utilities"]
documentation = "https://docs.rs/vivo"
include = ["src/**/*", "LICENSE-*", "README.md", "config/**/*"]
keywords = ["backup", "restic", "encryption", "cli", "b2"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/dantuck/vivo"
resolver = "2"
rust-version = "1.80.1"
description = "restic backup orchestrator with multi-remote sync and SOPS-encrypted secrets"

[dependencies]
knuffel = "3.2.0"
clap = { version = "4.3.13", features = ["cargo"] }
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
regex = "1.10.6"
env_logger = "0.11.5"
log = "0.4.22"
term_size = "0.3.2"
self_update = { version = "0.40", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"

[[bin]]
name = "vivo"
path = "src/bin/vivo.rs"
test = true
bench = true
doc = true
harness = true
edition = "2021"
